# LibWCL

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  DoxygenIndex  LICENSE  Makefile.am  README  README.OSX  REPO  autogen.sh  configure  configure.ac  install_ports.sh  libwcl-uninstalled.pc.in  libwcl.dox  libwcl.pc.in  system_prep.sh
cfg/: ax_config_dir.m4  msvc.m4  (+3 more)
examples/: Makefile.am
examples/artoolkitplus/: Makefile  Makefile.am  main.cpp
examples/bluetooth/: Makefile  Makefile.am  main.cpp
examples/calibration/: GrayCode.cpp  GrayCode.h  Makefile.am  PatternGenerator.h  calibration  main.cpp
examples/camera/: Makefile.am  configure.ac  main.cpp  selector.cpp  snapshot.cpp
examples/gestures/: Canvas.cpp  Canvas.h  GestureIO.cpp  GestureIO.h  Makefile.am  README  gestures  gestures.pro  main.cpp
examples/graycode/: GrayCode.cpp  GrayCode.h  Makefile.am  PatternGenerator.cpp  calibration  main.cpp
examples/kmeans/: Makefile.am  main.cpp
examples/lazysusan/: Makefile.am  lazy_susan  main.cpp
examples/network/: .gitignore  Makefile  Makefile.am  tcpclient.cpp  tcpserver.cpp  udpclient.cpp  udpserver.cpp
examples/parallel/: Makefile.am  control.cpp
examples/parsers/: Makefile  Makefile.am  loadobj.cpp
examples/patriot/: Makefile  main.cpp
examples/polhemus/: FasTrak.cpp  Makefile  Makefile.am  Patriot.cpp
examples/projectors/: Makefile.am  MatrixSwitch.cpp  pcontrol.cpp  powerProjector.cpp
examples/serial/: Makefile.am  helloserial.c  helloserial.cpp
examples/uvccam/.deps/: main.Po
examples/vicon/: Makefile  Makefile.am  main.cpp  vicontest
examples/video/: Makefile.am  main.cpp
examples/virtualtracker/: vt_main.cpp
examples/wiimote/: Makefile.am  main.cpp
src/gtest/tests/: BoundingBox.cpp  Geometry.cpp  Makefile.am  Ray.cpp
src/wcl/: .gitignore  CircularQueue  Exception.cpp  Exception.h  IO.cpp  IO.h  Makefile.am  Singleton  api.h  debug.h
src/wcl/1394cam/: 1394cam.cpp  1394cam.h  ARVideoSettingsController.h  AbstractFirewireCamera.cpp  AbstractFirewireCamera.h  AbstractIEEE1394Cam.cpp  AbstractIEEE1394Cam.h  DC1394.cpp  DC1394.h  IEEE1394Cam.cpp  IEEE1394Cam.h  IEEE1394cam.cpp  IEEE1394cam.h  Makefile  debug.cpp  debug.h  video.c  video.h
src/wcl/1394cam/linux/: LinuxIEEE1394Cam.cpp  LinuxIEEE1394Cam.h  camera.cpp  camera.h  conversions.cpp  conversions.h  firewire.cpp  firewire.h
src/wcl/1394cam/osx/: ARVideoSettingsController.m  Camera.cpp  Camera.h  Control.cpp  Control.h  FWController.cpp  FWController.h  FWDevice.h  Makefile  OSXIEEE1394Cam.cpp  OSXIEEE1394Cam.h  constants.h  exception.h  formats.h  settings.h  singleton.h  video.cpp  video.h
src/wcl/bluetooth/: Bluetooth.cpp  Bluetooth.h
src/wcl/camera/: Camera.cpp  Camera.h  CameraException.cpp  CameraException.h  CameraFactory.cpp  CameraFactory.h  DC1394.cpp  DC1394.h  DC1394Camera.cpp  DC1394Camera.h  DC1394CameraFactory.cpp  DC1394CameraFactory.h  PTGreyCamera.cpp  PTGreyCamera.h  PTGreyCameraFactory.cpp  PTGreyCameraFactory.h  UVCCamera.cpp  UVCCamera.h  UVCCameraFactory.cpp  UVCCameraFactory.h  VirtualCamera.cpp  VirtualCamera.h  VirtualCameraDefaultImage.c  VirtualCameraDefaultImage.xcf
src/wcl/display/: XDisplay.cpp  XDisplay.h
src/wcl/geometry/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  CSGEngine.cpp  CSGEngine.h  Face.cpp  Face.h  GeometryLoader.cpp  GeometryLoader.h  IntersectStatus.h  Intersection.h  KMeans.cpp  KMeans.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  MaterialLibrary.cpp  MaterialLibrary.h  OBJFormat.l  OBJFormat.y  OBJGeometry.cpp  OBJGeometry.h  Plane.cpp  Plane.h  PolygonObject.cpp  PolygonObject.h  Ray.cpp  Ray.h  Vertex.cpp  Vertex.h
src/wcl/gestures/: Gestures.cpp  Gestures.h  Point.cpp  Point.h
src/wcl/graphics/structuredlight/: GrayCode.cpp  GrayCode.h
src/wcl/maths/: .SVD.cpp.swp  Matrix.cpp  Matrix.h  MatrixOps.cpp  Quaternion.cpp  Quaternion.h  SMatrix.cpp  SMatrix.h  Vec3.cpp  Vec3.h  Vector.cpp  Vector.h
src/wcl/network/: Makefile.am  Manufacturer.cpp  Manufacturer.h  Network.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h  UDPPacket.h  UDPServer.cpp  UDPServer.h  UDPSocket.cpp  UDPSocket.h
src/wcl/network/tests/: .cvsignore  Driver  Makefile  comp.sh  global.h  serial.cpp  serial.d  serial.h  tcpclient.cpp  tcpclient.d  tcpserver.cpp  udpclient.cpp  udpserver.cpp
src/wcl/osg/: OSGHelper.cpp  OSGHelper.h
src/wcl/parallel/: Parallel.cpp  Parallel.h
src/wcl/parser/: OBJFormatGrammar.yy  OBJFormatScanner.h  OBJFormatScanner.ll  OBJMaterialParser.cpp  OBJMaterialParser.h  OBJParser.cpp  OBJParser.h  Parser.cpp  Parser.h  ParserException.cpp  ParserException.h
src/wcl/projector/: MatrixSwitch.cpp  MatrixSwitch.h  RemoteProjector.cpp  RemoteProjector.h
src/wcl/rawports/: Bluetooth.cpp  Bluetooth.h  IODevice.h  Parallel.h  Serial.cpp  Serial.h
src/wcl/serial/: Serial.cpp  Serial.h
src/wcl/tracking/: ARToolKitPlusTrackedObject.cpp  ARToolKitPlusTrackedObject.h  ARToolKitPlusTracker.cpp  ARToolKitPlusTracker.h  DummyTrackedObject.cpp  DummyTrackedObject.h  DummyTracker.cpp  DummyTracker.h  LazySusan.cpp  LazySusan.h  LazySusanTrackedObject.cpp  LazySusanTrackedObject.h  Patriot.cpp  Patriot.h  PatriotTrackedObject.cpp  PatriotTrackedObject.h  Polhemus.cpp  Polhemus.h  PolhemusTrackedObject.cpp  PolhemusTrackedObject.h  TrackedObject.h  Tracker.h  ViconClient.cpp  ViconClient.h  ViconTrackedObject.cpp  ViconTrackedObject.h  VirtualTrackedObject.cpp  VirtualTrackedObject.h  VirtualTracker.cpp  VirtualTracker.h
src/wcl/util/: CircularBuffer.h
src/wcl/uvccam/: UVCCamera.cpp  UVCCamera.h
src/wcl/vicon/: Marker.cpp  Marker.h  SixDofObject.cpp  SixDofObject.h  TarsusClient.cpp  TrackedObject.cpp  TrackedObject.h  ViconClient.cpp  ViconClient.h
src/wcl/video/: VideoDecoder.cpp  VideoDecoder.h
src/wcl/wiimote/: Wiimote.cpp  Wiimote.h  WiimoteException.cpp  WiimoteException.h
tests/: BoundingBox.cpp  Line.cpp  Makefile.am  OBJMaterialParser.cpp  OBJParser.cpp  Ray.cpp
tests/gtest/lib/: libgtest_main.la
(+7 files in other folders)
