SUBDIRS=

if ENABLE_EXAMPLES

if ENABLE_NETWORK
SUBDIRS+=network
endif

if ENABLE_GESTURES
SUBDIRS+=gestures
endif

if ENABLE_PARSERS
SUBDIRS+=parsers
endif

if ENABLE_TRACKING_VICON
SUBDIRS+=vicon
endif

if ENABLE_VIDEO
SUBDIRS+=video
endif

if ENABLE_CAMERA
SUBDIRS+=camera
endif

if ENABLE_SERIAL
SUBDIRS+=serial
endif

if ENABLE_PARALLEL
SUBDIRS+=parallel
endif

if ENABLE_BLUETOOTH
SUBDIRS+=bluetooth
endif

if ENABLE_TRACKING_ARTOOLKITPLUS
SUBDIRS+=artoolkitplus
endif

if ENABLE_WIIMOTE
SUBDIRS+=wiimote
endif

if ENABLE_STRUCTUREDLIGHT
SUBDIRS+=graycode
endif

SUBDIRS+=lazysusan
SUBDIRS+=kmeans


endif
