# 
# Indicate this is not a GNU project and that 
# missing files should be automatically created
AUTOMAKE_OPTIONS=foreign

videotestdir=../
videotest_PROGRAMS = videotest 
videotest_LDADD = @PKGCONFIG_OTHERLIBS@

# Headers that have to be compiled
videotest_HEADERS = 


# Sources that have to be compiled
videotest_SOURCES = \
					main.cpp

