# 
# Indicate this is not a GNU project and that 
# missing files should be automatically created
AUTOMAKE_OPTIONS=foreign

cameratestdir=../
cameratest_PROGRAMS = cameratest 
cameratest_LDADD = @PKGCONFIG_OTHERLIBS@

# Headers that have to be compiled
cameratest_HEADERS = 


# Sources that have to be compiled
cameratest_SOURCES = \
					main.cpp

