# 
# Indicate this is not a GNU project and that 
# missing files should be automatically created
AUTOMAKE_OPTIONS=foreign

videodir=../
video_PROGRAMS = video
video_LDADD = @PKGCONFIG_OTHERLIBS@

# Headers that have to be compiled
video_HEADERS = 


# Sources that have to be compiled
video_SOURCES = main.cpp

