# $Id$
#
noinst_LIBRARIES = libwcl_network.a

INCLUDES= -I@top_srcdir@/src

libwcl_network_a_SOURCES=\
	      Socket.h\
	      Socket.cpp\
              Network.h\
              TCPServer.cpp\
              TCPServer.h\
              TCPSocket.cpp\
              TCPSocket.h\
              UDPPacket.h\
              UDPServer.cpp\
              UDPServer.h\
              UDPSocket.cpp\
              UDPSocket.h
